# system-tactics

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
assets/levels/: default.toml  test_large.toml  test_small.toml
docs/: README.md  architecture.md
docs/projects/archive/basic-level-setup/: plan.md
docs/projects/basic-level-setup/: plan.md
docs/projects/basic-level-setup/specs/: basic-level-setup.md
docs/projects/template/: plan-template.md  spec-template.md
game/: Cargo.toml
game/src/: main.rs
level-editor/: Cargo.toml
level-editor/src/: main.rs
shared/: Cargo.toml
shared/src/: colors.rs  input.rs  level.rs  lib.rs  rendering.rs
shared/src/level/: management.rs  mesh.rs
shared/src/rendering/: camera.rs  debug_aids.rs  ui.rs
