[workspace]
members = ["level-editor", "game", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Eren"]
license = "MIT"
repository = "https://github.com/eren/system-tactics"
homepage = "https://github.com/eren/system-tactics"
documentation = "https://github.com/eren/system-tactics#readme"
keywords = ["game", "tactical-rpg", "bevy", "wasm", "hex-grid", "rust"]
categories = ["games", "web-programming", "webassembly", "simulation"]

[workspace.dependencies]
bevy = { version = "0.16.1", features = ["bevy_gizmos"] }
hexx = { version = "0.21", features = ["serde", "mesh"] }
anyhow = "1.0.99"
serde = { version = "1.0.207", features = ["derive"] }
tracing = "0.1.40"

# Size-optimized release profile for WASM builds
[profile.release]
opt-level = 'z'        # Optimize for size over performance
strip = "symbols"      # Remove symbol information
lto = true            # Enable link-time optimization
codegen-units = 1     # Single compilation unit for better optimization
panic = 'abort'       # Reduce panic handling overhead