[package]
name = "game"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SystemTactics main game binary: tactical RPG with hex grid combat and god evolution system"

[dependencies]
bevy.workspace = true
hexx.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
shared = { path = "../shared" }

[target.wasm32-unknown-unknown.dependencies]
# WASM-specific optimizations
wasm-bindgen = "0.2"
# getrandom is pulled in by Bevy (for UUIDs) and other dependencies
# but doesn't enable the wasm_js feature required for WASM compilation.
# We add it here solely to enable that feature - we don't use it directly.
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"

[[bin]]
name = "game"
path = "src/main.rs"