[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared game logic for SystemTactics: hex grid math, combat calculations, and entity definitions"

[dependencies]
bevy.workspace = true
hexx.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
toml = "0.9.7"
ndarray = { version = "0.16", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"